name:                sunrise
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/HaPyTeX/sunrise#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          hapytexteu+gh@gmail.com
copyright:           2019 Willem Van Onsem
category:            science
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Astronomy.Planet
    , Astronomy.Sunrise
    , Astronomy.Utils
  build-depends:
      base >= 4.7 && < 5
    , data-default >=0.2
    , time >=1.0
  default-language:    Haskell2010
  default-extensions:
      Safe

source-repository head
  type:     git
  location: https://github.com/KommuSoft/sunrise
